fix: add safety precautions for gallery images to prevent overflow

--- a/rg_web/src/styles.scss
+++ b/rg_web/src/styles.scss
@@ -877,6 +877,16 @@ article th {
         aspect-ratio: 3 / 4;
       }
     }
+    
+    // Safety precaution against spill-over
+    .gallery-img {
+      overflow: hidden;
+      
+      > img {
+        max-width: 100%;
+        max-height: 100%;
+      }
+    }
   }
 
   .main-navigation ul {
